--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,6 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0",
-    "bun-template": "link:bun-template"
+    "dobuki-auth": "link:dobuki-auth"
   }
 }
