--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bun-template",
-  "module": "src/index.tsx",
-  "description": "Bun template for creating projects using bunjs",
-  "version": "1.0.64",
+  "name": "dobuki-auth",
+  "module": "src/index.ts",
+  "description": "Authentication using Firebase",
+  "version": "1.0.0",
   "keywords": [
     "bun",
     "bunjs",
@@ -15,11 +15,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:jacklehamster/bun-template.git"
+    "url": "https://github.com/jacklehamster/dobuki-auth.git"
   },
-  "homepage": "https://jacklehamster.github.io/bun-template/",
+  "homepage": "https://jacklehamster.github.io/dobuki-auth/",
   "author": {
-    "name": "Jack Le Hamster",
+    "name": "Vincent Le Quang",
     "email": "jacklehamster@gmail.com"
   },
   "license": "MIT",
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "test": "bun test",
-    "build": "bun i && rm -rf *.tsbuildinfo && rm -rf dist/*.* && bun run bundler/bundler.ts && bun run test && bun run build:declaration",
+    "build": "bun i && rm -rf *.tsbuildinfo && rm -rf dist/*.* && bun run bundler/bundler.ts && bun link && bun run test && bun run build:declaration",
     "build:declaration": "tsc --emitDeclarationOnly --project tsconfig.types.json",
     "build:example": "cd example && bun i && bun run build && cd ..",
     "example": "cd example && bun start && cd ..",
@@ -45,9 +45,16 @@
     "dist"
   ],
   "devDependencies": {
-    "@dobuki/dev-dependencies": "^1.0.16"
+    "@dobuki/dev-dependencies": "^1.0.16",
+    "@types/firebase": "^3.2.3",
+    "firebaseui": "^6.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@clerk/clerk-js": "^5.43.4",
+    "firebase": "^11.1.0",
+    "vite": "latest"
   }
 }
